fix: don't mess with font size or alignment
the text underline decoration gets messed up on Chromium

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,7 +6,5 @@ a[href]:not(:where(
 [href*="//microblog.ayushnix.com"],
 [href*="//wiki.ayushnix.com"],
 ))::after {
-  font-size: var(--step-s1);
   content: " ↗";
-  vertical-align: middle;
 }
